--- a/os_pilot_online-master/index.html
+++ b/os_pilot_online-master/index.html
@@ -122,7 +122,8 @@
     ];
     
     var test_procedure = {
-        timeline: [fixation, intro_video, first_video, test_trial, second_video, end_video],
+        //timeline: [fixation, intro_video, first_video, test_trial, second_video, end_video],
+		timeline: [intro_video, first_video, test_trial, second_video, end_video],
         timeline_variables: test_stimuli,
         sample:{
             type: 'without-replacement'
