--- a/os_pilot_online-master/index.html
+++ b/os_pilot_online-master/index.html
@@ -46,12 +46,12 @@
     timeline.push(welcome);
 
     /* define fixation trial */
-    // var fixation = {
-    //     type: 'html-keyboard-response',
-    //     stimulus: '<div style="font-size:60px;">+</div>',
-    //     choices: jsPsych.NO_KEYS,
-    //     trial_duration: 1000
-    // };
+    var fixation = {
+        type: 'html-keyboard-response',
+        stimulus: '<div style="font-size:60px;">+</div>',
+        choices: jsPsych.NO_KEYS,
+        trial_duration: 1000
+    };
 
     /* define intro video trial */
     var intro_video = {
@@ -122,8 +122,8 @@
     ];
     
     var test_procedure = {
-        //timeline: [fixation, intro_video, first_video, test_trial, second_video, end_video],
-		timeline: [intro_video, first_video, test_trial, second_video, end_video],
+        timeline: [fixation, intro_video, first_video, test_trial, second_video, end_video],
+		//timeline: [intro_video, first_video, test_trial, second_video, end_video],
         timeline_variables: test_stimuli,
         sample:{
             type: 'without-replacement'
